--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 <body>
     <h1>BlackJack</h1>
     <p id="message-el">Want to play a round?</p>
-    <p>Cards: </p>
-    <p>Sum: </p>
-    <button id="startGame()">START GAME</button>
+    <p id="cards-el">Cards: </p>
+    <!--<p class="sum-el">Sum: </p> if this used use .class in querySelector-->
+    <p id="sum-el">Sum: </p>
+    <button class="start" onclick="startGame()">START GAME</button>
+    <button class="hit" onclick="newCard()">HIT!</button>
     <script src="index.js"></script>
 </body>
 </html>
+
+<!-- <html>
+    <head>
+    </head>
+    <body>
+        <p id="greeting-el"></p>
+        <script src="index.js"></script>
+    </body>
+</html> -->
