black jack completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!--<p class="sum-el">Sum: </p> if this used use .class in querySelector-->
     <p id="sum-el">Sum: </p>
     <button class="start" onclick="startGame()">START GAME</button>
-    <button class="hit" onclick="newCard()">HIT!</button>
+    <button class="hit" onclick="hit()">HIT!</button>
+    <p id="player-el"></p>
     <script src="index.js"></script>
 </body>
 </html>
